manejo de formulario

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         Ir a la imagen
                     </a>
                 </li>
-                <li><a href="">Ir a la tabla</a></li>
-                <li><a href="">Ir a mi hoja de vida</a></li>
+                <li><a href="vistas/tabla.html">Ir a la tabla</a></li>
+                <li><a href="vistas/hojadevida.html">Ir a mi hoja de vida</a></li>
                 <li><a href="https://youtu.be/CU24iC3grq8?si=ryNZbuwP51CsV6Un">Ir al video de neuronas artificiales</a></li>
 
             </ul>
