--- a/vistas/tabla.html
+++ b/vistas/tabla.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tablas</title>
+    <style>
+        body {
+            margin: auto;
+            color: rgb(164, 250, 34);
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Tabla de posiciones campeonato ecuatoriano 2025</h1>
-    <div>
+    <h1
+        style="color:red; font-size:25px; text-align: center; background-color: yellow; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+        Tabla de posiciones campeonato ecuatoriano 2025</h1>
+    <div style="background-color: blue;">
         <table borde="1px">
             <thehead>
                 <tr>
@@ -23,6 +33,7 @@
                     <th>Puntos</th>
                 </tr>
             </thehead>
+
             <body>
                 <tr>
                     <td>1</td>
@@ -36,7 +47,7 @@
                     <td>32</td>
                     <td>63</td>
                 </tr>
-                
+
                 <tr>
                     <td>2</td>
                     <td>Barselons S.C</td>
@@ -55,5 +66,9 @@
             </tfoot>
         </table>
     </div>
+    <div>
+        <a href="../index.html" style="background: yellow;">Ir a index</a>
+    </div>
 </body>
+
 </html>
