--- a/vistas/formulario.html
+++ b/vistas/formulario.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../estilos/formulaio.css">
     <title>Manejo Formulario</title>
 </head>
 
@@ -53,7 +54,7 @@
         <!--Ingreso de una area de texto-->
         <div>
             <label for="comentario">Ingrese su comentario</label>
-            <textarea name="comentario" id="comentario" rows="15" cols="100"></textarea>
+            <textarea name="comentario" id="comentario" rows="15" cols="50"></textarea>
         </div>
         <br>
         <!--Radio buttons-->
