--- a/vistas/tabla.html
+++ b/vistas/tabla.html
@@ -36,9 +36,13 @@
     <div class="titulo-contenedor">
     <h1 id="titulo">Tabla de posiciones campeonato ecuatoriano 2025 </h1>
     </div>
+    <!--Creo una caja-->
+    <div class="contenedor1">
+        <h2>2</h2>
+    </div>
     <div class="contenedor">
-        <table border="1px">
-            <thehead>
+        <table class="tabla">
+            <thead>
                 <tr>
                     <th>ID Equipo</th>
                     <th>Nombre Equipo</th>
@@ -51,7 +55,7 @@
                     <th>Diferencia de goles</th>
                     <th>Puntos</th>
                 </tr>
-            </thehead>
+            </thead>
 
             <body>
                 <tr>
@@ -79,15 +83,28 @@
                     <td>13</td>
                     <td>53</td>
                 </tr>
+                    <tr>
+                    <td>2</td>
+                    <td>Barselons S.C</td>
+                    <td>29</td>
+                    <td>16</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>45</td>
+                    <td>32</td>
+                    <td>13</td>
+                    <td>53</td>
+                </tr>                 
             </body>
             <tfoot>
 
             </tfoot>
         </table>
     </div>
-    <div class="contenedor">
+    <div class="contenedor2">
         <a href="../index.html" >Ir a index</a>
     </div>
+    
 </body>
 
 </html>
